--- a/Program Files/Customer_Reviews.ipynb
+++ b/Program Files/Customer_Reviews.ipynb
@@ -1,6 +1,455 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "70ba9bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Library Imports \n",
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "# NOTE!!! CODE REQUIRED TO RECIEVE INPUT VARIABLE  rev_name\n",
+    "\n",
+    "# TEST\n",
+    "rev_name = 'Ben'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "36ad7d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 446708 entries, 0 to 446707\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count   Dtype \n",
+      "---  ------         --------------   ----- \n",
+      " 0   listing_id     446708 non-null  int64 \n",
+      " 1   id             446708 non-null  int64 \n",
+      " 2   date           446708 non-null  object\n",
+      " 3   reviewer_id    446708 non-null  int64 \n",
+      " 4   reviewer_name  446708 non-null  object\n",
+      " 5   comments       446254 non-null  object\n",
+      "dtypes: int64(3), object(3)\n",
+      "memory usage: 20.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load datasets\n",
+    "id_reviews_df = pd.read_csv(\"Data/reviews_dec18.csv\")\n",
+    "id_reviews_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d9894ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>658</th>\n",
+       "      <td>15253</td>\n",
+       "      <td>82707781</td>\n",
+       "      <td>2016-06-29</td>\n",
+       "      <td>6845091</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Morag was great. Made me feel very welcome and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>936</th>\n",
+       "      <td>44545</td>\n",
+       "      <td>6664364</td>\n",
+       "      <td>2013-08-20</td>\n",
+       "      <td>193087</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Atari's apartment was clean, tidy and had natu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1555</th>\n",
+       "      <td>65635</td>\n",
+       "      <td>87063621</td>\n",
+       "      <td>2016-07-18</td>\n",
+       "      <td>82272367</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Great host, home away from home</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2274</th>\n",
+       "      <td>75702</td>\n",
+       "      <td>23262352</td>\n",
+       "      <td>2014-11-27</td>\n",
+       "      <td>3711484</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>The reservation was canceled 9 days before arr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2521</th>\n",
+       "      <td>79024</td>\n",
+       "      <td>3587410</td>\n",
+       "      <td>2013-02-19</td>\n",
+       "      <td>4983666</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Dan's place is amazing! We had a great time, e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445115</th>\n",
+       "      <td>29490923</td>\n",
+       "      <td>346227963</td>\n",
+       "      <td>2018-11-07</td>\n",
+       "      <td>163839952</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Barbara and Diego are lovely hosts! We spent a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445605</th>\n",
+       "      <td>29693713</td>\n",
+       "      <td>346786226</td>\n",
+       "      <td>2018-11-09</td>\n",
+       "      <td>7819493</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Nando’s apartment is in the heart of Bondi Bea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445631</th>\n",
+       "      <td>29706828</td>\n",
+       "      <td>354491939</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>132929037</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Literally the easiest &amp; best accomodation I ha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445676</th>\n",
+       "      <td>29714659</td>\n",
+       "      <td>355604032</td>\n",
+       "      <td>2018-12-04</td>\n",
+       "      <td>69117914</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Excellent location, perfect hosts and a house ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>446447</th>\n",
+       "      <td>30137865</td>\n",
+       "      <td>351206173</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>108054088</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>The apartment is in a good location, walking t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1605 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        listing_id         id        date  reviewer_id reviewer_name   \n",
+       "658          15253   82707781  2016-06-29      6845091           Ben  \\\n",
+       "936          44545    6664364  2013-08-20       193087           Ben   \n",
+       "1555         65635   87063621  2016-07-18     82272367           Ben   \n",
+       "2274         75702   23262352  2014-11-27      3711484           Ben   \n",
+       "2521         79024    3587410  2013-02-19      4983666           Ben   \n",
+       "...            ...        ...         ...          ...           ...   \n",
+       "445115    29490923  346227963  2018-11-07    163839952           Ben   \n",
+       "445605    29693713  346786226  2018-11-09      7819493           Ben   \n",
+       "445631    29706828  354491939  2018-12-02    132929037           Ben   \n",
+       "445676    29714659  355604032  2018-12-04     69117914           Ben   \n",
+       "446447    30137865  351206173  2018-11-22    108054088           Ben   \n",
+       "\n",
+       "                                                 comments  \n",
+       "658     Morag was great. Made me feel very welcome and...  \n",
+       "936     Atari's apartment was clean, tidy and had natu...  \n",
+       "1555                     Great host, home away from home   \n",
+       "2274    The reservation was canceled 9 days before arr...  \n",
+       "2521    Dan's place is amazing! We had a great time, e...  \n",
+       "...                                                   ...  \n",
+       "445115  Barbara and Diego are lovely hosts! We spent a...  \n",
+       "445605  Nando’s apartment is in the heart of Bondi Bea...  \n",
+       "445631  Literally the easiest & best accomodation I ha...  \n",
+       "445676  Excellent location, perfect hosts and a house ...  \n",
+       "446447  The apartment is in a good location, walking t...  \n",
+       "\n",
+       "[1605 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Function/s\n",
+    "\n",
+    "# Retrieve reviews by Name (rev_name)\n",
+    "def reviews_by_name(id_reviews_df, rev_name):\n",
+    "\n",
+    "    return id_reviews_df[id_reviews_df['reviewer_name'] == rev_name]\n",
+    "\n",
+    "rev_name_df = reviews_by_name(id_reviews_df, rev_name)\n",
+    "\n",
+    "rev_name_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4cc28e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>373629</th>\n",
+       "      <td>21801214</td>\n",
+       "      <td>224342451</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>3674</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Fantastic, super modern apartment in Bondi. Ev...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264012</th>\n",
+       "      <td>16046333</td>\n",
+       "      <td>212653770</td>\n",
+       "      <td>2017-11-18</td>\n",
+       "      <td>10957</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Clean, tidy and in a great location. A really ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435276</th>\n",
+       "      <td>27317117</td>\n",
+       "      <td>320430208</td>\n",
+       "      <td>2018-09-09</td>\n",
+       "      <td>58298</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Lovely, clean stylish yurt just a couple of mi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69714</th>\n",
+       "      <td>3761889</td>\n",
+       "      <td>214429307</td>\n",
+       "      <td>2017-11-26</td>\n",
+       "      <td>123875</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Great place, Laurene and Florián were very eas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275894</th>\n",
+       "      <td>16386833</td>\n",
+       "      <td>224363124</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>155448</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Incredible views and a pleasant, clean, and co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368890</th>\n",
+       "      <td>21612397</td>\n",
+       "      <td>341430743</td>\n",
+       "      <td>2018-10-27</td>\n",
+       "      <td>221853459</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Great place in a fantastic location. Aimee was...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401904</th>\n",
+       "      <td>23196680</td>\n",
+       "      <td>347139309</td>\n",
+       "      <td>2018-11-11</td>\n",
+       "      <td>224546682</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Great location on a nice quiet street, but sti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385286</th>\n",
+       "      <td>22227484</td>\n",
+       "      <td>349564972</td>\n",
+       "      <td>2018-11-17</td>\n",
+       "      <td>224571548</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Amazing place. Would highly recommend! Will de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374366</th>\n",
+       "      <td>21816486</td>\n",
+       "      <td>347148700</td>\n",
+       "      <td>2018-11-11</td>\n",
+       "      <td>224571548</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>We had an amazing stay, it was a beautiful stu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381429</th>\n",
+       "      <td>22071501</td>\n",
+       "      <td>351427532</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>225656194</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Excellent location and great apartment.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1581 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        listing_id         id        date  reviewer_id reviewer_name   \n",
+       "373629    21801214  224342451  2018-01-02         3674           Ben  \\\n",
+       "264012    16046333  212653770  2017-11-18        10957           Ben   \n",
+       "435276    27317117  320430208  2018-09-09        58298           Ben   \n",
+       "69714      3761889  214429307  2017-11-26       123875           Ben   \n",
+       "275894    16386833  224363124  2018-01-03       155448           Ben   \n",
+       "...            ...        ...         ...          ...           ...   \n",
+       "368890    21612397  341430743  2018-10-27    221853459           Ben   \n",
+       "401904    23196680  347139309  2018-11-11    224546682           Ben   \n",
+       "385286    22227484  349564972  2018-11-17    224571548           Ben   \n",
+       "374366    21816486  347148700  2018-11-11    224571548           Ben   \n",
+       "381429    22071501  351427532  2018-11-22    225656194           Ben   \n",
+       "\n",
+       "                                                 comments  \n",
+       "373629  Fantastic, super modern apartment in Bondi. Ev...  \n",
+       "264012  Clean, tidy and in a great location. A really ...  \n",
+       "435276  Lovely, clean stylish yurt just a couple of mi...  \n",
+       "69714   Great place, Laurene and Florián were very eas...  \n",
+       "275894  Incredible views and a pleasant, clean, and co...  \n",
+       "...                                                   ...  \n",
+       "368890  Great place in a fantastic location. Aimee was...  \n",
+       "401904  Great location on a nice quiet street, but sti...  \n",
+       "385286  Amazing place. Would highly recommend! Will de...  \n",
+       "374366  We had an amazing stay, it was a beautiful stu...  \n",
+       "381429            Excellent location and great apartment.  \n",
+       "\n",
+       "[1581 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dataframe Clean\n",
+    "rev_name_df = rev_name_df.drop_duplicates(subset='comments', keep='first')\n",
+    "rev_name_df = rev_name_df.sort_values(by='reviewer_id')\n",
+    "rev_name_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8fcace13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export filtered data\n",
+    "rev_name_df.to_csv('fitered_rev_name_data.csv', index=False)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
